# argos-coevolution

./: .gitignore  README.md  README.txt  create_video.sh  plotData.m
controllers/: CMakeLists.txt
controllers/predator_nn/: CMakeLists.txt  predator_nn_controller.cpp  predator_nn_controller.h
controllers/prey_nn/: CMakeLists.txt  prey_nn_controller.cpp  prey_nn_controller.h
embedding/: CMakeLists.txt
embedding/co_evo/: CMakeLists.txt  main.cpp
experiments/: coevo-trial.argos  coevo.argos
loop_functions/: CMakeLists.txt
loop_functions/co_evolution_loop_functions/: CMakeLists.txt  co_evolution_loop_functions.cpp  co_evolution_loop_functions.h
